--- a/src/components/app-header/header.scss
+++ b/src/components/app-header/header.scss
@@ -1,28 +1,50 @@
-.app-header{
+#header {
     width: 100%;
-    height: 44px;
-    position: absolute;
+    height: 1rem;
+    background: #fff;
+    position: fixed;
     top: 0;
     left: 0;
-    background:rgba(216, 174, 226, 0.541);
-    // z-index: 10;
-}
-.app-header .title{
-    width: 100%;
+    z-index: 2;
+  }
+  
+  #header ul {
     height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    line-height: 1rem;
     text-align: center;
-    line-height: 44px;
-    font-size: 16px;
-}
-.app-header .header-left-btn, .app-header .header-right-btn{
-    padding: 10px 10px;
-    position: absolute;
-    top: 0;
-    font-size: 24px;
-}
-.app-header .header-left-btn{
-    left: 10px;
-}
-.app-header .header-right-btn{
-    right: 10px;
-}
+    overflow: hidden;
+  }
+  
+  #header ul li img {
+    width: 2.5rem;
+    height: .6rem;
+  }
+  
+  #header ul li a {
+    display: block;
+    width: 3rem;
+    height: 0.5rem;
+    border-radius: 0.5rem;
+    background: #eee;
+    color: #7e8c8d;
+    margin-top: 0.1rem;
+    text-decoration: none;
+    -webkit-backface-visibility: hidden;
+    border: none;
+    outline: 0;
+    line-height: 0.6rem;
+    text-align: center;
+  }
+  
+  #header ul li button {
+    width: 1rem;
+    height: 0.5rem;
+    border: 1px solid seagreen;
+    border-radius: 0.3rem;
+    color: #2CC17B;
+    background: #fff;
+    font-size: 0.24rem;
+  }
