--- a/src/components/tab-bar/style.scss
+++ b/src/components/tab-bar/style.scss
@@ -1,11 +1,13 @@
 .tab-bar{
     width: 100%;
-    height: 49px;
+    height: 1rem;
     position: absolute;
     left: 0;
     bottom: 0;
     display: flex;
-    background: rgba(216, 174, 226, 0.541);
+    // background: #f5f5f5;
+    border: #ccc solid 1px;
+    padding-top: .1rem;
     .tab-item{
         flex: 1;
         display: flex;
@@ -14,10 +16,10 @@
             text-align: center;
         }
         span:nth-of-type(1){
-            font-size: 28px;
+            font-size: .56rem;
         }
         span:nth-of-type(2){
-            font-size: 12px;
+            font-size: .26rem;
         }
     }
 }
