--- a/src/components/tab-bar/style.scss
+++ b/src/components/tab-bar/style.scss
@@ -5,7 +5,7 @@
     left: 0;
     bottom: 0;
     display: flex;
-    // background: #f5f5f5;
+     background: #fff;
     border: #ccc solid 1px;
     padding-top: .1rem;
     .tab-item{
