--- a/src/pages/home/root/children/children.css
+++ b/src/pages/home/root/children/children.css
@@ -13,19 +13,19 @@
 	width: 100%;
 	min-height:5rem ;
 }
- .theme1,.theme2{
+ .theme1,.theme2.theme3{
 	 background: #fff;
 	width: 100%;
 	min-height: 5rem;
 	margin: .1rem;
 }
-.theme1 h2,.theme1 h2{
+.theme1 h2,.theme2 h2,.theme3 h2{
 	width: 100%;
 	height: 1rem;
 	line-height: 1rem;
 	text-align: left;
 }
- .theme1>ul{
+ .theme1>ul,.theme3>ul{
 	width: 100%;
 	min-height: 3rem;
 	display: flex;
@@ -33,12 +33,12 @@
 	justify-content: space-around;
 	
 }
- .theme1>ul>li{
+ .theme1>ul>li,.theme3>ul>li{
 	width: 46%;
 	height: 3.6rem;
 	
 }
- .theme1>ul>li>img{
+ .theme1>ul>li>img,.theme3>ul>li>img{
 	width: 98%;
 	height: 2.5rem;
 }
