--- a/src/pages/home/root/children/children.css
+++ b/src/pages/home/root/children/children.css
@@ -40,10 +40,14 @@
 }
  .theme1>ul>li>img,.theme3>ul>li>img{
 	width: 98%;
-	height: 2.5rem;
+	height: 2.3rem;
 }
 .theme2 img{
 	width: 98%;
 	height: 4rem;
 	padding: .2rem;
+}
+.price strong{
+	color: red;
+	/* font-weight: 777; */
 }
