--- a/src/components/app-header/header.scss
+++ b/src/components/app-header/header.scss
@@ -23,8 +23,8 @@
     height: .6rem;
   }
   
-  #header ul li a {
-    display: block;
+  .search {
+    //display: block;
     width: 3rem;
     height: 0.5rem;
     border-radius: 0.5rem;
