--- a/src/components/app-scroll/appScroll.scss
+++ b/src/components/app-scroll/appScroll.scss
@@ -1,8 +1,7 @@
 .scroll-wrapper{
-    // width: 100%;
-    // height: 100%;
+    
     overflow: hidden;
     position: relative;
-    top: 1rem;
+    top: 0;
     left: 0;
 }
