--- a/src/pages/home/root/children/home_banner/banner.css
+++ b/src/pages/home/root/children/home_banner/banner.css
@@ -13,3 +13,70 @@
     width: 100%;
 
 }
+/* #banner_son{
+    background: #fff;
+    width: 100%;
+} */
+.scrollContent{
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.bannerDetail,.bannerDetail2,.bannerDetail3{
+    width: 100%;
+}
+.bannerDetail1 img{
+width: 100%;
+height: 5rem;
+}
+
+.bannerDetail2>h4{
+    width: 100%;
+    height: 1.3rem;
+    line-height: 1.3rem;
+    text-align: center;
+    font-size: .4rem;
+}
+.bannerDetail2>h2{
+  width: 100%;
+  height: 1rem;
+  line-height: 1rem;
+  padding-left: .5rem;
+  color: rgb(207, 96, 142);
+  font-size: .56rem;
+}
+.bannerDetail2>h4>strong{
+    font-size: .5rem;
+    color: rgb(211, 57, 36)
+}
+.bannerDetail2>h4>span{
+    padding-left: 1rem;
+    text-decoration: line-through;
+}
+.bannerDetail2,.bannerDetail3>img{
+ width: 100%;
+}
+#foot{
+    width: 100%;
+    height: 1rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 999;
+    background:rgb(207, 96, 142);
+    border-radius: 1rem;
+   
+}
+#foot .buy{
+    width: 100%;
+    height: 100%;
+    line-height: 1rem;
+    vertical-align: middle;
+    padding-left: 2.7rem;
+    color:#fff;
+    font-size: .46rem;
+    
+}
+
