--- a/src/pages/home/root/children/home_banner/banner.css
+++ b/src/pages/home/root/children/home_banner/banner.css
@@ -29,20 +29,21 @@
 }
 .bannerDetail1 img{
 width: 100%;
-height: 5rem;
+height: 4rem;
 }
 
 .bannerDetail2>h4{
     width: 100%;
-    height: 1.3rem;
-    line-height: 1.3rem;
+    height: 1rem;
+    line-height: 1rem;
     text-align: center;
     font-size: .4rem;
 }
 .bannerDetail2>h2{
+    padding-top: .5rem;
   width: 100%;
-  height: 1rem;
-  line-height: 1rem;
+  min-height: 1rem;
+  /* line-height: 1rem; */
   padding-left: .5rem;
   color: rgb(207, 96, 142);
   font-size: .56rem;
