--- a/src/components/app-header/header.scss
+++ b/src/components/app-header/header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 1rem;
     background: #fff;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
