--- a/src/pages/home/root/children/children.css
+++ b/src/pages/home/root/children/children.css
@@ -38,6 +38,9 @@
 	height: 3.6rem;
 	
 }
+.theme1>ul>li,.theme3>ul>li>p{
+	font-size: .32rem;
+}
  .theme1>ul>li>img,.theme3>ul>li>img{
 	width: 98%;
 	height: 2.3rem;
