--- a/src/pages/home/root/children/home_banner/banner.css
+++ b/src/pages/home/root/children/home_banner/banner.css
@@ -50,7 +50,7 @@ height: 4rem;
 }
 .bannerDetail2>h4>strong{
     font-size: .5rem;
-    color: rgb(211, 57, 36)
+    color: #FF632A
 }
 .bannerDetail2>h4>span{
     padding-left: 1rem;
@@ -59,25 +59,5 @@ height: 4rem;
 .bannerDetail2,.bannerDetail3>img{
  width: 100%;
 }
-#foot{
-    width: 100%;
-    height: 1rem;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 999;
-    background:rgb(207, 96, 142);
-    border-radius: 1rem;
-   
-}
-#foot .buy{
-    width: 100%;
-    height: 100%;
-    line-height: 1rem;
-    vertical-align: middle;
-    padding-left: 2.7rem;
-    color:#fff;
-    font-size: .46rem;
-    
-}
+
 
