--- a/src/pages/home/root/children/home_goodLesson/goodLesson.css
+++ b/src/pages/home/root/children/home_goodLesson/goodLesson.css
@@ -1,9 +1,10 @@
-.scrollContent{
+.scrollSon{
     position: absolute;
     top: 1rem;
     left: 0;
     bottom: 0;
     width: 100%;
+    z-index: 999;
 }
 .lessonDetail,.lessonDetail2,.lessonDetail3,.lessonDetail4{
     width: 100%;
@@ -32,6 +33,7 @@ height: 4rem;
   padding-left: .5rem;
   color: rgb(68, 49, 57);
   font-size: .56rem;
+  font-family:"正楷";
 }
 .lessonDetail2>h4>strong{
     font-size: .5rem;
@@ -44,25 +46,4 @@ height: 4rem;
 .lessonDetail2,.lessonDetail3>img{
  width: 100%;
 }
-#foot{
-    width: 100%;
-    height: 1rem;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 999;
-    /* background:#FF632A; */
-    background: #fff;
-    border-radius: 1rem;
-   
-}
-#foot .buy{
-    width: 100%;
-    height: 100%;
-    line-height: 1rem;
-    vertical-align: middle;
-    padding-left: 2.7rem;
-    color:#fff;
-    font-size: .46rem;
-    
-}
+
